# Wayd

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  run.ps1  wayd.bat
Release/v1/: .gitignore  CLAUDE.md  README.md  Toast提醒.py  nextStep.md  pyproject.toml  pystray_demo.py  view.py  线程生命周期_demo.py
src/: backup.py  exporter.py  main.py  note.py  view.py
