[project]
name = "whatareyoudoing-wayd"
version = "0.1.0"
description = "WAYD (在干嘛) — A desktop time-tracking tool with random popup, screenshot, and SQLite logging"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pillow>=12.2.0",
    "plyer>=2.1.0",
    "pyautogui>=0.9.54",
    "pystray>=0.19.5",
    "setuptools<68",
    "win10toast>=0.9",
    "python-docx>=1.1.2",
    "fpdf2>=2.8.2",
]
